# openweathermap

./: CNAME  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: api.rs  lib.rs  tests.rs
