[package]
name = "openweathermap"
version = "0.1.0"
authors = ["Patrick Hoffmann <pat@thats-software.com>"]
edition = "2018"
description = "easy access current weather data from OpenWeatherMap"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://github.com/fightling/openweathermap"
homepage = "https://github.com/fightling/openweathermap"
keywords = ["weather", "openweathermap" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.3", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http = "0.2.4"
regex = "1.4.6"
rand = "0.8.3"
futures = "0.3.1"
