[package]
name = "openweathermap"
version = "0.2.3"
authors = ["Patrick Hoffmann <pat@thats-software.com>"]
edition = "2018"
description = "easy access current weather data from OpenWeatherMap"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/openweathermap"
homepage = "https://openweathermap.thats-software.com"
keywords = ["weather", "openweathermap" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.3", default-features = false, features = ["blocking"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
http = { version = "0.2.4", default-features = false }
regex = { version = "1.4.6", default-features = false, features = ["std"] }
rand = { version = "0.8.3", default-features = false }
futures = { version = "0.3.1", default-features = false, features = ["executor"] }
