[package]
name = "openweathermap"
version = "0.2.4"
authors = ["Patrick Hoffmann <pat@thats-software.com>"]
edition = "2018"
description = "easy access current weather data from OpenWeatherMap"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/openweathermap"
homepage = "https://openweathermap.thats-software.com"
keywords = ["weather", "openweathermap" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.3", default-features = false, features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
http = { version = "0.2.4" }
regex = { version = "1.4.6" }
rand = { version = "0.8.3" }
futures = { version = "0.3.1", features = ["executor"] }
chrono = "0.4"
